--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "triton>=3.6.0",
-    "tritonclient>=2.65.0",
+    "tritonclient[grpc]>=2.65.0",
     "ultralytics>=8.4.14",
 ]
